--- a/src/app/component/oferta/oferta.admin.plist.routed/oferta.admin.plist.routed.component.css
+++ b/src/app/component/oferta/oferta.admin.plist.routed/oferta.admin.plist.routed.component.css
@@ -1,7 +1,7 @@
 :root {
     --violet: #3f14b8;
     /* primario */
-    --softviolet:#9982fd;
+    --softviolet: #9982fd;
     --mint: #00b894;
     /* éxito */
     --coral: #e749a0;
@@ -19,26 +19,30 @@
     box-shadow: 0 12px 40px rgba(61, 1, 173, 0.774) !important;
 }
 
-.header-ofertas{
+.header-ofertas {
     padding-inline: 10%;
     padding-block: 2%;
     border-bottom: 1px solid black;
 }
 
-.candidatura-oferta{
-    font-size:1rem ;
+.candidatura-oferta {
+    font-size: 1rem;
 }
 
-.title-gradient{
-  background: linear-gradient(90deg, var(--violet, #3f14b8), var(--softviolet, #9982fd));
-  -webkit-background-clip: text;   /* necesario en WebKit */
-  background-clip: text;
-  -webkit-text-fill-color: transparent; /* clave para que se vea el gradiente */
-  color: transparent;               /* por si el motor usa color */
-  display: inline-block;            /* evita rarezas en elementos inline */
-  font-size: 3rem;
-  text-align: center;
-  
+.title-gradient {
+    background: linear-gradient(90deg, var(--violet, #3f14b8), var(--softviolet, #9982fd));
+    -webkit-background-clip: text;
+    /* necesario en WebKit */
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
+    /* clave para que se vea el gradiente */
+    color: transparent;
+    /* por si el motor usa color */
+    display: inline-block;
+    /* evita rarezas en elementos inline */
+    font-size: 3rem;
+    text-align: center;
+    font-weight: 700;
 }
 
 /* Toolbar */
@@ -87,8 +91,9 @@
     padding-inline: 5rem;
 }
 
-.table-ofertas{
-    padding-block: 20px;}
+.table-ofertas {
+    padding-block: 20px;
+}
 
 .table-separated {
     border-collapse: separate;
@@ -148,7 +153,7 @@
 /* Enlaces / Badges */
 .id-link,
 .link-empresa {
-    color: var(--violet , #3f14b8);
+    color: var(--violet, #3f14b8);
     text-decoration: none;
     font-weight: 600;
     transition: color .15s ease;
@@ -164,7 +169,7 @@
 .text-info {
     color: #2979ff !important;
     font-size: 1rem;
-    
+
 }
 
 .bg-soft-danger {
@@ -229,7 +234,7 @@
 }
 
 .rpp-pills .btn.active {
-    background-color: var(--softviolet, #9982fd);
+    background: linear-gradient(90deg, var(--violet, #3f14b8), var(--softviolet, #9982fd));
     border-color: rgba(63, 20, 184, .25);
     color: white;
     font-weight: 600;
