--- a/src/app/component/shared/shared.menu.unrouted/shared.menu.unrouted.component.css
+++ b/src/app/component/shared/shared.menu.unrouted/shared.menu.unrouted.component.css
@@ -1,3 +1,4 @@
+
 nav {
     align-self: center;
     padding: 10px;
@@ -39,6 +40,10 @@ nav {
                 border-radius: var(--bs-border-radius-lg);
             }
             
+            .bi-search{
+                color:white;
+                margin-right: 6px;
+            }
         }
 
         .navbar-session{
